Fixed spacing and alignment for 'Null' and 'Trash' column in the widget schema editor

--- a/cdap-ui/app/features/hydratorplusplus/bottompanel.less
+++ b/cdap-ui/app/features/hydratorplusplus/bottompanel.less
@@ -318,16 +318,20 @@ body.theme-cdap.state-hydratorplusplus {
           padding-right: 20px;
         }
         &.name {
-          width: 35%;
+          width: 40%;
+          max-width: 45%;
         }
         &.type {
-          width: 30%;
+          max-width: 45%;
+          width: 40%;
         }
         &.nullable {
-          width: 20%;
+          width: 15px;
+          min-width: 15px;
         }
         &.trash {
-          width: 15%;
+          width: 15px;
+          min-width: 15px;
           a {
             padding-left: 0;
             padding-right: 0;
